Improve jbang directives + make max context length 512 to be friendly out-of-the-box with low-memory devices.